<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="captechventures.com.techchallenge4.cookbook.recipes.details.RecipeDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/button_height_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/recipe_details_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:padding="@dimen/content_padding"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        tools:text="@string/selection_category_name" />

                    <TextView
                        android:id="@+id/recipe_details_cooktime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/content_padding"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        tools:text="@string/selection_recipe_cooktime" />
                </LinearLayout>

                <TextView
                    android:id="@+id/recipe_details_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/rowBackground"
                    android:padding="@dimen/recipe_details_padding"
                    android:textAlignment="textStart"
                    tools:text="@string/recipe_details_ingredients"
                    android:layout_gravity="start" />

                <TextView
                    android:id="@+id/recipe_details_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/recipe_details_padding"
                    android:textAlignment="textStart"
                    tools:text="@string/recipe_details_instructions"
                    android:layout_gravity="start" />

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_edit_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit"
                style="@style/AppTheme.RaisedButton"
                />

            <Button
                android:id="@+id/button_delete_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/AppTheme.RaisedButton"
                android:text="@string/delete" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>