<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_recipe_deletion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialog_fragment_padding"
    >

    <TextView
        android:id="@+id/delete_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/delete_confirmation_msg"
        android:textAlignment="center"
        android:padding="@dimen/dialog_msg_padding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_delete_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:theme="@style/AppTheme.FlatButton"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/button_delete_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:theme="@style/AppTheme.FlatButton"
            style="?android:attr/borderlessButtonStyle"
            />

    </LinearLayout>

</LinearLayout>